--- a/_DaBa.tex
+++ b/_DaBa.tex
@@ -13,6 +13,7 @@
 \logofile{logo}							% name of logo-PDF in images/ (or use \logofile{} for no logo)
 \bibliography{literatur}  	% name of the BibTeX (.bib) file
 
+\usepackage{listings}
 \usepackage{graphicx}
 \usepackage{tikz}
 \usepackage{pgfplots}
