--- a/literatur.bib
+++ b/literatur.bib
@@ -21,6 +21,18 @@
   publisher={Springer}
 }
 
+@misc{TensorFlow,
+	title={TensorFlow},
+	url={http://www.tensorflow.org}
+}
+
+@article{wp2015tensorflow,
+  title={Tensorflow: Large-scale machine learning on heterogeneous distributed systems},
+  author={Abadi, Martin and Agarwal, Ashish and Barham, Paul and Brevdo, Eugene and Chen, Zhifeng and Citro, Craig and Corrado, Greg S and Davis, Andy and Dean, Jeffrey and Devin, Matthieu and others},
+  journal={Google Research Whitepaper, http://research.google.com/pubs/archive/45166.pdf},
+  year={2015}
+}
+
 @manual{amsldoc02,
 	author={{American Mathematical Society}},
 	title={User's Guide for the {\tt amsmath} Package},
