tf.Dtypes, Ops-> Konst begin

--- a/_DaBa.tex
+++ b/_DaBa.tex
@@ -94,6 +94,7 @@
 \include{begriffe}
 \include{tensorflow}
 \include{keyPointDetection}
+%\include{Zusammenfassung_Ausblick} % Stephan TODO
 %\include{diplomschrift}
 %\include{latex}
 %\include{abbildungen}
