--- a/begriffe.tex
+++ b/begriffe.tex
@@ -593,4 +593,6 @@ Dies ist erforderlich da diese Funktion bei jeder Evaluierung der Trainingsdaten
 
 \paragraph{GPU - GPGPU}
 
+\paragraph{Batch Learning}
+
 %\section{Tensorflow Typen Unterstützung}
