nn's fixint issues

--- a/tensorflow.tex
+++ b/tensorflow.tex
@@ -427,7 +427,7 @@ TensorFlow besitzt deshalb mehrere Hilfsfunktionen, welche das arbeiten mit Klas
 	\item \textit{tf.nn.softmax} bildet alle Ergebnisse auf einen prozentualen Bereich ab. 
 	So ergeben alle möglichen Ausgänge in Summe 100\%, was soviel bedeutet das ein Ergebnis eine gewisse Wahrscheinlichkeit besitzt. 
 	\item \textit{tf.nn.softmax\_cross\_entropy\_with\_logits} bietet einem die Möglichkeit auf nicht skalierte Daten ein Ergebnis zu Berechnen, welches eine \textit{tf.nn.softmax} Berechnung liefern würde. 
-	Zusätzlich wird eine weitere so genannte 'cross entropy' Berechnung ausgeführt, wo das Ergebnis für Optimierungen benötigt wird. 
+	Zusätzlich wird eine weitere so genannte 'cross entropy' Operation ausgeführt, wo das Ergebnis für Optimierungen benötigt wird. 
 	Die gesamte Methode berücksichtigt Spezialfälle im gesamten Prozess, welche schwer manuell ab zu berücksichtigen sind. 
 \end{itemize}
 
@@ -437,7 +437,7 @@ Zu diesen existieren noch weitere Implementierungen mit weiteren Eigenheiten, we
 %\paragraph{Wiederkehrend Neuronale Netzwerke} 
 
 \noindent
-Des Weiteren gibt es Implementierungen für Wiederkehrende Neuronale und weiter in diesem Themengebiet. 
+Des Weiteren gibt es Implementierungen für Wiederkehrende Neuronale Netzwere und weiter Dinge in diesem Themengebiet. 
 \footnote{Online Dokumentation: Neural Network \url{https://www.tensorflow.org/api_guides/python/nn}}
 
 \subsubsection{Running Graphs}
