added paragraphs for tensorboard and training

--- a/tensorflow.tex
+++ b/tensorflow.tex
@@ -442,10 +442,20 @@ Des Weiteren gibt es Implementierungen für Wiederkehrende Neuronale Netzwere un
 
 \subsubsection{Running Graphs}
 
+\paragraph{Session}
+
 \subsubsection{Training}
 
-\subsection{Probleme}
+\paragraph{Optimizers}
 
-\subsubsection{NaN Problem}
+\paragraph{Gradient Computation}
+
+%\subsection{Probleme}
+
+%\subsubsection{NaN Problem}
 
 \subsection{TensorBoard}
+
+\paragraph{Graph}
+\paragraph{Event}
+\paragraph{Histogram} https://duckduckgo.com/?q=tensorboard+histogram&ia=qa
