fixed url issue

--- a/tensorflow.tex
+++ b/tensorflow.tex
@@ -458,4 +458,4 @@ Des Weiteren gibt es Implementierungen für Wiederkehrende Neuronale Netzwere un
 
 \paragraph{Graph}
 \paragraph{Event}
-\paragraph{Histogram} https://duckduckgo.com/?q=tensorboard+histogram&ia=qa
+\paragraph{Histogram} \url{https://duckduckgo.com/?q=tensorboard+histogram&ia=qa}
